--- a/commons-export/pom.xml
+++ b/commons-export/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>commons-export</artifactId>
-    <version>1.0.4</version>
+    <version>1.0.5</version>
     <name>commons-export</name>
     <packaging>jar</packaging>
     <description>通用导出组件</description>
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>org.fortune</groupId>
             <artifactId>commons-core</artifactId>
+            <version>1.0.4</version>
         </dependency>
         <!-- excel 操作 start -->
         <!--http://jxls.sourceforge.net/-->
@@ -40,9 +41,23 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- excel poi 操作相关 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
+        </dependency>
         <!-- excel 操作 end -->
 
         <!-- PDF插件相关 start -->
+        <!-- 根据模版导出pdf相关 -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
@@ -55,11 +70,28 @@
             <groupId>com.itextpdf.tool</groupId>
             <artifactId>xmlworker</artifactId>
         </dependency>
+        <!-- 硬编码导出pdf相关 -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>forms</artifactId>
+        </dependency>
         <!--设置pdf文件密码，还要引入下面bcprov-jdk15on.jar包：-->
         <!--<dependency>-->
-            <!--<groupId>org.bouncycastle</groupId>-->
-            <!--<artifactId>bcprov-jdk15on</artifactId>-->
-            <!--<version>1.54</version>-->
+        <!--<groupId>org.bouncycastle</groupId>-->
+        <!--<artifactId>bcprov-jdk15on</artifactId>-->
+        <!--<version>1.54</version>-->
         <!--</dependency>-->
         <!-- PDF插件相关end -->
     </dependencies>
