When installing the jar file into repository, it will also install the corresponding source code.

--- a/commons-crawler/pom.xml
+++ b/commons-crawler/pom.xml
@@ -77,5 +77,15 @@
 
     <build>
         <finalName>commons-crawler</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
