--- a/commons-datacache/pom.xml
+++ b/commons-datacache/pom.xml
@@ -72,5 +72,15 @@
 
   <build>
     <finalName>commons-datacache</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
 </project>
