--- a/commons-doc-common/pom.xml
+++ b/commons-doc-common/pom.xml
@@ -49,6 +49,16 @@
 
     <build>
         <finalName>commons-doc-common</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
