--- a/commons-web-springmvc/pom.xml
+++ b/commons-web-springmvc/pom.xml
@@ -58,4 +58,18 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>commons-web-springmvc</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
