--- a/commons-doc-client-netty/pom.xml
+++ b/commons-doc-client-netty/pom.xml
@@ -40,5 +40,15 @@
 
     <build>
         <finalName>commons-doc-client-netty</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
