--- a/commons-export/pom.xml
+++ b/commons-export/pom.xml
@@ -96,4 +96,18 @@
         <!-- PDF插件相关end -->
     </dependencies>
 
+    <build>
+        <finalName>commons-export</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
