--- a/pom.xml
+++ b/pom.xml
@@ -646,6 +646,23 @@
                     </executions>
                 </plugin>
 
+                <!-- 可以 使用 maven 生成 jar 的同时 生成 sources 包 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>3.0.0</version>
+                    <!-- 绑定source插件到Maven的生命周期,并在生命周期后执行绑定的source的goal -->
+                    <executions>
+                        <execution>
+                            <!-- 绑定source插件到Maven的生命周期 -->
+                            <phase>compile</phase>
+                            <!--在生命周期后执行绑定的source插件的goals -->
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
 
