--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,13 @@
         <!--Provided version-->
         <servlet.api.version>3.1.0</servlet.api.version>
 
-        <commons.collections4.version>4.1</commons.collections4.version>
+        <commons.collections4.version>4.4</commons.collections4.version>
         <commons.lang3.version>3.3.1</commons.lang3.version>
         <commons.beanutils.version>1.9.2</commons.beanutils.version>
         <commons.configuration2.version>2.4</commons.configuration2.version>
-        <commons.io.version>2.4</commons.io.version>
+        <commons.logging.version>1.2</commons.logging.version>
+        <commons.io.version>2.6</commons.io.version>
+        <commons.codec.version>1.13</commons.codec.version>
         <!--Spring -->
         <!--<spring.version>4.2.3.RELEASE</spring.version>-->
         <spring.version>5.1.5.RELEASE</spring.version>
@@ -225,7 +227,16 @@
                 <artifactId>commons-configuration2</artifactId>
                 <version>${commons.configuration2.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>${commons.logging.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons.codec.version}</version>
+            </dependency>
             <!--MemCache-->
             <dependency>
                 <groupId>com.googlecode.xmemcached</groupId>
@@ -335,6 +346,12 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
+                <version>${spring.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
                 <version>${spring.version}</version>
                 <scope>compile</scope>
             </dependency>
